# ic-auth-client-rs

./: .gitignore  .rust-analyzer.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
compat-tests/: .gitignore  README.md  index.html  main.js  package.json  playwright.config.js  vite.config.js
compat-tests/tests/: compat.spec.js
examples/bevy/: .gitignore  Makefile  NOTICE.md  README.md  dfx.json  package-lock.json  package.json
examples/bevy/.candid/: backend.did
examples/bevy/crates/frontend/: Cargo.toml
examples/bevy/crates/frontend/src/: auth.rs  bricks.rs  consts.rs  main.rs
examples/bevy/crates/frontend/src/auth/: backend.rs
examples/bevy/ii-integration/: .ic-assets.json5  README.md  package-lock.json  package.json
examples/bevy/ii_integration/: index.html  index.ts  package.json  tsconfig.json  vite.config.ts
examples/dioxus/: .gitignore  Cargo.toml  Makefile  README.md  dfx.json
examples/dioxus/.candid/: backend.did
examples/dioxus/crates/backend/: Cargo.toml
examples/dioxus/crates/backend/src/: log.rs
examples/dioxus/crates/backend/src/infrastructure/: log.rs  post_upgrade.rs
examples/dioxus/crates/backend/src/use_case/: note.rs
examples/dioxus/crates/domain/src/: note.rs
examples/dioxus/crates/domain/src/note/: value_object.rs
examples/dioxus/crates/domain/src/note/entity/: dao.rs
examples/dioxus/crates/domain/src/note/entity/dao/: v1.rs
examples/dioxus/crates/frontend/: Cargo.toml  Dioxus.toml  index.html  package-lock.json  package.json  styles.css
examples/dioxus/crates/frontend/public/: main.css
examples/dioxus/crates/frontend/src/: main.rs  styles.css
examples/dioxus/crates/frontend/src/contexts/: auth.rs
examples/dioxus/crates/frontend/src/contexts/auth/: backend.rs
examples/dioxus/crates/frontend/src/features/note/: component.rs
examples/dioxus/crates/frontend/src/features/user/: account.rs
examples/dioxus/crates/frontend/src/routes/: index.rs  mod.rs
examples/dioxus/crates/util/src/: dfx_network.rs
examples/gpui/: Cargo.toml  Makefile  README.md  dfx.json
examples/gpui/.candid/: backend.did
examples/gpui/crates/frontend/: Cargo.toml
examples/gpui/crates/frontend/src/: auth.rs  main.rs
examples/gpui/crates/frontend/src/auth/: backend.rs
examples/gpui/ii-integration/: LICENSE-MIT  index.html  package-lock.json  (+1 more)
examples/leptos/: Cargo.toml  Makefile  README.md  Trunk.toml  dfx.json
examples/leptos-tailwind/: .gitignore  Cargo.toml  README.md  Trunk.toml  dfx.json  package-lock.json  package.json  setup.sh
examples/leptos-tailwind/.candid/: ic-auth-client-leptos-backend.did
examples/leptos-tailwind/crates/backend/: Cargo.toml
examples/leptos-tailwind/crates/backend/src/: lib.rs  user_canister.rs
examples/leptos-tailwind/crates/frontend/: Cargo.toml  index.html  tailwind.config.js
examples/leptos-tailwind/crates/frontend/src/: components.rs  main.rs  stores.rs
examples/leptos-tailwind/crates/frontend/src/assets/: .ic-assets.json5
examples/leptos-tailwind/crates/frontend/src/components/: account.rs  note.rs
examples/leptos-tailwind/crates/frontend/src/stores/: agent.rs  auth_client.rs
examples/leptos-tailwind/crates/frontend/style/: main.css
examples/leptos-tailwind/crates/shared/: Cargo.toml
examples/leptos-tailwind/crates/shared/src/: lib.rs  note.rs  util.rs
examples/leptos-tailwind/crates/shared/src/util/: canister_id.rs
examples/leptos-tailwind/crates/user-canister/: Cargo.toml
examples/leptos-tailwind/crates/user-canister/src/: guards.rs  lib.rs
examples/leptos/crates/backend/: Cargo.toml
examples/leptos/crates/backend/src/: entry_point.rs  infrastructure.rs  log.rs
examples/leptos/crates/backend/src/controller/: note.rs
examples/leptos/crates/backend/src/entry_point/: note.rs
examples/leptos/crates/backend/src/infrastructure/: log.rs  memory.rs  post_upgrade.rs  pre_upgrade.rs
examples/leptos/crates/backend/src/infrastructure/note/: repository.rs
examples/leptos/crates/backend/src/use_case/: note.rs
examples/leptos/crates/domain/: Cargo.toml
examples/leptos/crates/domain/src/note/: entity.rs  repository.rs  service.rs
examples/leptos/crates/domain/src/note/entity/: dao.rs  dto.rs  model.rs
examples/leptos/crates/domain/src/note/entity/dao/: v1.rs
examples/leptos/crates/domain/src/note/value_object/: id.rs  title.rs
examples/leptos/crates/frontend/: Cargo.toml  index.html
examples/leptos/crates/frontend/public/: .ic-assets.json5
examples/leptos/crates/frontend/src/: features.rs  main.rs  routes.rs
examples/leptos/crates/frontend/src/contexts/: auth.rs
examples/leptos/crates/frontend/src/contexts/auth/: backend.rs
examples/leptos/crates/frontend/src/features/note/: component.rs
examples/leptos/crates/frontend/src/features/user/: account.rs
examples/leptos/crates/frontend/src/routes/: index.rs
examples/leptos/crates/util/src/: canister_id.rs  dfx_network.rs  lib.rs
examples/tauri/: .gitignore  Cargo.toml  README.md  Trunk.toml
examples/tauri/crates/backend/src/: entry_point.rs  lib.rs
examples/tauri/crates/frontend/.cargo/: config.toml
examples/tauri/crates/frontend/src/: main.rs  styles.css
examples/tauri/crates/frontend/src/contexts/: auth.rs
examples/tauri/crates/frontend/src/features/note/: component.rs
examples/tauri/crates/util/: Cargo.toml
examples/tauri/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri/src-tauri/src/: main.rs
ic-auth-bridge/: LICENSE-APACHE  LICENSE-MIT  README.md  package.json  tsconfig.json
ic-auth-bridge/src/: index.ts
ii-integration/: README.md  package.json
ii-integration/src/: index.ts
ii_integration/: index.ts  package-lock.json  package.json
src/: api.rs  auth_client.rs  idle_manager.rs  key.rs  lib.rs  option.rs  storage.rs  util.rs
src/auth_client/: native.rs  wasm_js.rs
src/idle_manager/: native.rs  wasm_js.rs
src/option/: native.rs  wasm_js.rs
src/storage/: async_storage.rs  db.rs  js_compat.rs  sync_storage.rs  wasm_js.rs
src/util/: arc_identity.rs  callback.rs  delegation_chain.rs  sleep.rs
(+14 files in other folders)
