[package]
name = "ic-auth-client"
version = "0.4.1"
authors = ["Inomoto, Yota <yota@perforate.org>"]
license = "Apache-2.0"
edition = "2024"
rust-version = "1.85.0"

description = "A client library for Internet Computer identity authentication services."
include = ["/src", "/Cargo.toml", "/README.md", "/LICENSE"]

documentation = "https://docs.rs/ic-auth-client/"
repository = "https://github.com/wiyota/ic-auth-client-rs/"

readme = "README.md"

categories = ["api-bindings", "authentication", "wasm"]
keywords = ["icp", "internet-computer", "identity", "frontend"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
base64 = "0.22"
bon = "3"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
futures = "0.3"
ic-agent = { version = "0.44", default-features = false }
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tracing = { version = "0.1", optional = true }

[target."cfg(target_family = \"wasm\")".dependencies]
getrandom = { version = "0.3", optional = true }
gloo-events = { version = "0.2", optional = true }
gloo-timers = { version = "0.3", optional = true, features = ["futures"] }
gloo-utils = { version = "0.2", optional = true }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-timer = "0.2"
web-sys = { version = "0.3", optional = true, default-features = false, features = [
    "MessageEvent",
    "Storage",
    "Url",
    "Window",
] }

[target."cfg(not(target_family = \"wasm\"))".dependencies]
anyhow = "1.0"
candid = "0.10"
chrono = "0.4"
hex = "0.4"
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
percent-encoding = "2.3"
portpicker = "0.1"
rdev = "0.5"
serde_json = "1.0"
tiny_http = "0.12"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "time"] }
url = "2"
webbrowser = "1.0"

[dev-dependencies]
serde_test = "1.0"
wasm-bindgen-test = "0.3"

[features]
default = ["wasm-js"]
miniserde = []
tracing = ["dep:tracing"]
wasm-js = [
    "dep:gloo-events",
    "dep:gloo-timers",
    "dep:gloo-utils",
    "dep:web-sys",
    "getrandom/wasm_js",
    "ic-agent/wasm-bindgen",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
rustdoc-args = ["--cfg=docsrs"]
features = []
