[workspace]
members = [
    "crates/backend",
    "crates/frontend",
    "crates/shared",
    "crates/user-canister",
]
resolver = "2"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[workspace.dependencies]
shared = { path = "crates/shared" }

candid = "0.10.10"
ic-stable-structures = "0.6.5"
leptos = "0.6.15"
leptos_meta = "0.6.15"
leptos_router = "0.6.15"
serde = { version = "1.0.210", features = ["derive"] }
