[workspace]
members = ["crates/backend", "crates/domain", "crates/frontend", "crates/util"]
resolver = "2"

[workspace.dependencies]
domain = { path = "crates/domain" }
util = { path = "crates/util" }

candid = { version = "0.10.18", default-features = false }
ic-stable-structures = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
