[package]
publish = false
name = "frontend"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
bevy = { version = "0.18" }
candid.workspace = true
flume = "0.12"
haalka = "0.5.1"
ic-agent = "0.45"
ic-auth-client = { path = "../../../../", default-features = false, features = [
    "keyring",
    "native",
    "tracing",
] }
keyring = "3.6"
lazy_static = "1.5"
rand = "0.9"
serde.workspace = true
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
util.workspace = true
futures-lite = "2.6"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 's'

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
