[package]
name = "frontend"
version = "0.0.1"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
candid.workspace = true
core-text = "=21.0.0" # temporary workaround for https://github.com/zed-industries/zed/issues/46966
flume = "0.12"
gpui = "0.2.2"
gpui-component = "0.5.0"
ic-agent = "0.45"
ic-auth-client = { path = "../../../../", default-features = false, features = [
    "keyring",
    "native",
    "tracing",
] }
keyring = "3.6"
serde.workspace = true
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
util.workspace = true
