[package]
publish = false
name = "shared"
version = "0.0.1"
edition = "2021"

[features]
default = []
frontend = ["leptos"]
backend = ["ic-stable-structures"]

[dependencies]
candid.workspace = true
derive_more = { version = "1.0", features = [
    "as_ref",
    "display",
    "from",
    "from_str",
] }
dotenvy_macro = "0.15.7"
ic-stable-structures = { workspace = true, optional = true }
leptos = { workspace = true, optional = true }
serde.workspace = true
