[package]
publish = false
name = "ic_auth_client_leptos_user_canister"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk = "0.17.0"
ic-cdk-macros = "0.17.0"
ic-stable-structures.workspace = true
shared = { workspace = true, features = ["backend"] }
