[package]
publish = false
name = "backend"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
candid.workspace = true
ciborium = "0.2.2"
domain = { workspace = true, features = ["entity", "ic-stable"]}
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
ic-stable-structures.workspace = true
no-panic = "0.1"
serde.workspace = true
