[package]
publish = false
name = "frontend"
version = "0.0.1"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[dependencies]
candid.workspace = true
console_error_panic_hook = "0.1.7"
domain = { workspace = true, features = ["dto"]}
dotenvy_macro = "0.15.7"
futures = "0.3.31"
getrandom = { version = "0.3", features = ["wasm_js"] }
ic-agent = { version = "0.40.0", features = ["wasm-bindgen"] }
ic-auth-client = { path = "../../../../" }
leptos = { version = "0.7.8", features = ["csr"] }
leptos_meta = "0.7.8"
leptos_router = "0.7.8"
leptos_router_macro = "0.7.8"
reactive_graph = "0.1.8"
reactive_stores = "0.1.8"
serde.workspace = true
serde-wasm-bindgen = "0.6.5"
util.workspace = true
web-sys = { version = "0.3", features = ["Window", "Navigator", "Document"] }
